Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2884

'kudu hms fix' CLI tool mistakenly reports on non-matching master addresses

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.14.0
    • CLI, hms
    • None

    Description

      When running the kudu hms fix against a Kudu cluster with managed Kudu tables created via impala-shell, the tool misinterprets master addresses being non-equal since from one side it gets the addresses with the default port number from CLI context, and from the other side the default port number is omitted (HMS metainfo). As a result, the tool output an error and fails.

      sudo -u kudu kudu hms fix a.b.c.com --drop_orphan_hms_tables --ignore_other_clusters=false
      
      I0630 17:29:55.427356  3689 tool_action_hms.cc:602] Skipping drop of orphan HMS table db_name.table_name with master addresses parameter a.b.c.com because it does not match the --master_addresses argument (use --force to skip this check)
      

      Running the tool with --force might might introduce some issues if there are some table which indeed have different set of master addresses recorded in their HMS metadata.

      Attachments

        Activity

          People

            granthenke Grant Henke
            aserbin Alexey Serbin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: